--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-
   <groupId>com.sblack.autoconfigureproxy</groupId>
   <artifactId>autoconfigure-proxy</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
-
   <name>configure-proxy</name>
   <url>http://maven.apache.org</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+      <jdk.version>1.8</jdk.version>
   </properties>
 
   <dependencies>
@@ -19,13 +18,13 @@
       <groupId>commons-cli</groupId>
       <artifactId>commons-cli</artifactId>
       <version>1.4</version>
-      <scope>build</scope>
+      <scope>compile</scope>
     </dependency>
   <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-exec</artifactId>
       <version>1.3</version>
-      <scope>build</scope>
+      <scope>compile</scope>
   </dependency>
     <dependency>
       <groupId>junit</groupId>
@@ -34,4 +33,60 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
+  <build>
+  <finalName>autoconfigure-proxy</finalName>
+  <plugins>
+
+    <!-- Set a compiler level -->
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-compiler-plugin</artifactId>
+      <version>2.3.2</version>
+      <configuration>
+        <source>${jdk.version}</source>
+        <target>${jdk.version}</target>
+      </configuration>
+    </plugin>
+
+    <!-- Make this jar executable -->
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-jar-plugin</artifactId>
+        <version>3.0.2</version>
+      <configuration>
+        <archive>
+          <manifest>
+            <addClasspath>true</addClasspath>
+            <mainClass>com.sblack.autoconfigureproxy.CLI</mainClass>
+            <classpathPrefix>dependency-jars/</classpathPrefix>
+          </manifest>
+        </archive>
+      </configuration>
+    </plugin>
+
+    <!-- Copy project dependency -->
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-dependency-plugin</artifactId>
+      <version>2.5.1</version>
+      <executions>
+        <execution>
+          <id>copy-dependencies</id>
+          <phase>package</phase>
+          <goals>
+            <goal>copy-dependencies</goal>
+          </goals>
+          <configuration>
+            <!-- exclude junit, we need runtime dependency only -->
+            <includeScope>runtime</includeScope>
+            <outputDirectory>${project.build.directory}/dependency-jars/</outputDirectory>
+          </configuration>
+        </execution>
+      </executions>
+    </plugin>
+
+  </plugins>
+  </build>
+
 </project>
