started shell script to simplify calling of program

--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,7 @@
                   <directory>${project.basedir}/src/main/resources</directory>
                   <includes>
                     <include>commands.json</include>
+                    <include>autoproxy</include>
                     <include>settings.json</include>
                   </includes>
                 </resource>
